# fastapi-async-postgresql-filtering

./: .gitignore  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/controller/: person.py
app/models/: person.py
app/repository/: person.py
migrations/: env.py
migrations/versions/: aefb4547e65c_init_table.py
