[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Evaristo <evaristofm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
sqlalchemy = "1.4.41"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"